[package]
name = "tll"
version = "0.1.0"
authors = ["Pavel Shramov <shramov@mexmat.net>"]
edition = "2018"
license = "MIT"

[dependencies]
tll-sys = { path = "tll-sys", version = "0.1.0" }
bitflags = ">= 1.2, < 2.0"
memchr = ">= 2.3"
rust_decimal = ">= 1.23"
num-traits = ">= 0.2"
chrono = ">= 0.4"
serde_core = "= 1.0"
base64 = ">= 0.13"

[dev-dependencies]
serde_json = "= 1.0"

[profile.dev]
debug-assertions = true
overflow-checks = true

#[build]
#[profile.dev]
#rustflags = ["-C", "link-arg=-Wl,-rpath,/home/psha/src/tll/build/lib"]

[[example]]
name = "echo"
crate-type = ["cdylib"]
